--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body {
   display: flex;
 }
 
-/* possible styling to the div - shouldn't ruin the animation
+/*  possible styling to the div - shouldn't ruin the animation */
 #svgDiv {
   border: solid 1px black;
   border-radius: 50% 50% 0 0;
   height: 40vw;
-  width: 35vw;
-} */
+  width: 40vw;
+}
 
 .color_btn {
   cursor: pointer;
@@ -59,14 +59,18 @@ svg {
 }
 #preview img {
   position: absolute;
-  width: 100%;
+  height: 40vw;
+  width: 40vw;
   height: auto;
   top: 0;
-  left: 0%;
+  left: 0;
   pointer-events: none;
 }
 #preview {
-  width: 60%;
-  height: 100%;
+  /* width: 60%;
+  height: 100%; */
   position: relative;
+}
+#configurator {
+  width: 50%;
 }
