--- a/style.css
+++ b/style.css
@@ -185,7 +185,15 @@ label {
 #refreshAddon {
   opacity: 50%;
   cursor: pointer;
+  width: 20%;
   /* margin-top: 1rem;
   width: 1rem;
   height: auto; */
+}
+
+#refresh_button {
+  width: 7%;
+  height: 7%;
+  margin: 1rem 1.2rem;
+  cursor: pointer;
 }
