--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ label {
   /* width: 50vw; */
 }
 
-#options img {
+figure img {
   width: 75%;
 }
 
@@ -193,7 +193,8 @@ label {
 #refreshAddon {
   opacity: 50%;
   cursor: pointer;
-  width: 20%;
+  width: 3rem;
+  margin: 2.5rem 0;
   /* margin-top: 1rem;
   width: 1rem;
   height: auto; */
