--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   font-weight: normal;
   font-style: normal;
 }
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
 
 :root {
   --color-1: #314b1d;
@@ -11,7 +12,7 @@
   --color-3: #4a4848;
   --color-4: #f7f7f7;
   --font-1: "Magilio";
-  --font-2: Arial, Helvetica, sans-serif;
+  --font-2: "Montserrat", sans-serif;
 }
 header {
   font-family: "Magilio";
@@ -53,7 +54,7 @@ main {
 
 figcaption {
   font-family: var(--font-2);
-  font-size: 1vw;
+  font-size: 1.1vw;
 }
 
 #preview {
@@ -164,7 +165,7 @@ figure img {
   justify-content: space-between;
   margin-bottom: 4vw;
   margin-top: -1vw;
-  width: 70%;
+  width: 75%;
 }
 #optionsExtras {
   align-items: baseline;
