--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 :root {
   --color-1: #314b1d;
   --color-2: #4d89e3;
@@ -13,6 +12,41 @@
   --font-1: "Magilio";
   --font-2: Arial, Helvetica, sans-serif;
 }
+.option {
+  position: relative;
+  height: 80px;
+}
+p {
+  margin: 0;
+  color: white;
+  font-family: var(--font-2);
+  font-size: 1vw;
+  padding: 5px;
+  border-radius: 20px;
+  background-color: var(--color-3);
+}
+.hover_text {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  /* top: 90;
+  bottom: 0;
+  left: 0;
+  right: 0; */
+  background: black;
+  color: black;
+  visibility: hidden;
+  opacity: 0;
+
+  /* transition effect. not necessary */
+  transition: opacity 0.2s, visibility 0.2s;
+}
+
+.option:hover .hover_text {
+  visibility: visible;
+  opacity: 1;
+}
+
 header {
   font-family: "Magilio";
 }
