--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 .option {
   position: relative;
-  height: 120px;
+  /* height: 120px; */
 }
 p {
   margin: 0;
@@ -31,7 +31,24 @@ p {
   position: absolute;
   margin: 0;
   padding: 0;
-  top: 90;
+  top: 120;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* background: black;
+  color: black; */
+  visibility: hidden;
+  opacity: 0;
+
+  /* transition effect. not necessary */
+  transition: opacity 0.2s, visibility 0.2s;
+}
+
+.hover_text_extras {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+
   bottom: 0;
   left: 0;
   right: 0;
@@ -45,6 +62,11 @@ p {
 }
 
 .option:hover .hover_text {
+  visibility: visible;
+  opacity: 1;
+}
+
+.option:hover .hover_text_extras {
   visibility: visible;
   opacity: 1;
 }
@@ -85,11 +107,6 @@ h2 {
 }
 main {
   display: flex;
-}
-
-figcaption {
-  font-family: var(--font-2);
-  font-size: 1.1vw;
 }
 
 #preview {
@@ -198,7 +215,7 @@ figure img {
 #optionsPlants {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 4vw;
+  margin-bottom: 2vw;
   margin-top: -1vw;
   width: 75%;
 }
